# dichvuthongtin.dkkd.gov.vn-crawler

./: .gitignore  README.md  crawler.py  main.py  pyproject.toml  requirements.txt  test_crawler.py
.github/: copilot-instructions.md
.serena/: project.yml
src/dkkd_crawler/: __init__.py  cli.py  crawler.py  models.py
tests/: test_crawler.py
