[project]
name = "dkkd-crawler"
version = "0.1.0"
description = "Crawler tra cứu thông tin doanh nghiệp từ dichvuthongtin.dkkd.gov.vn"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "cloakbrowser>=0.1.0",
]

[project.scripts]
dkkd-crawler = "dkkd_crawler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dkkd_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
